parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> clase
Rule 1     clase -> CLASS clase_a a
Rule 2     clase_a -> ID
Rule 3     a -> EXTENDS ID b
Rule 4     a -> b
Rule 5     b -> OCURLY programa CCURLY bb
Rule 6     bb -> incclase clase
Rule 7     bb -> <empty>
Rule 8     incclase -> <empty>
Rule 9     programa -> c
Rule 10    c -> ID ID EQUAL NEW creaobj c
Rule 11    c -> ddd
Rule 12    c -> e
Rule 13    d -> ddddd vars dd
Rule 14    ddd -> dddd d
Rule 15    dddd -> <empty>
Rule 16    ddddd -> GLOBAL
Rule 17    dd -> d
Rule 18    dd -> main e
Rule 19    e -> ee
Rule 20    ee -> metodos eee
Rule 21    ee -> <empty>
Rule 22    eee -> ee
Rule 23    eee -> <empty>
Rule 24    creaobj -> ID OPARENTHESIS CPARENTHESIS SEMICOLON
Rule 25    vars -> f
Rule 26    f -> PUBLIC g
Rule 27    f -> g
Rule 28    g -> tipo h
Rule 29    h -> ID i
Rule 30    i -> OBRACKET CTEI CBRACKET j
Rule 31    i -> j
Rule 32    j -> COMMA j_j
Rule 33    j -> SEMICOLON
Rule 34    j_j -> ID j
Rule 35    tipo -> INT
Rule 36    tipo -> FLOAT
Rule 37    tipo -> BOOL
Rule 38    tipo -> STRING
Rule 39    varcte -> CTEI varcte_int
Rule 40    varcte -> CTEF varcte_float
Rule 41    varcte -> CTES varcte_string
Rule 42    varcte -> FALSE varcte_bool
Rule 43    varcte -> TRUE varcte_bool
Rule 44    varcte -> varcte_id
Rule 45    varcte_int -> <empty>
Rule 46    varcte_float -> <empty>
Rule 47    varcte_string -> <empty>
Rule 48    varcte_bool -> <empty>
Rule 49    varcte_id -> ID
Rule 50    metodos -> k
Rule 51    k -> k_k OPARENTHESIS l
Rule 52    k_k -> tipo ID
Rule 53    k_k -> VOID ID
Rule 54    l -> pars actualizaparametros ll
Rule 55    l -> ll
Rule 56    actualizaparametros -> <empty>
Rule 57    ll -> CPARENTHESIS OCURLY poncuadruplometodo m
Rule 58    m -> vars terminavarsmetodo mm
Rule 59    terminavarsmetodo -> <empty>
Rule 60    mm -> estatuto n
Rule 61    mm -> m
Rule 62    poncuadruplometodo -> <empty>
Rule 63    n -> CCURLY
Rule 64    n -> mm
Rule 65    pars -> tipo ID o
Rule 66    o -> OBRACKET CBRACKET oo
Rule 67    o -> oo
Rule 68    oo -> COMMA pars
Rule 69    oo -> <empty>
Rule 70    estatuto -> asignacion
Rule 71    estatuto -> IF condicion
Rule 72    estatuto -> FOR ciclofor
Rule 73    estatuto -> WHILE ciclowhile
Rule 74    estatuto -> iniciacontadormetodos prefunc
Rule 75    estatuto -> READ read
Rule 76    estatuto -> PRINT print
Rule 77    estatuto -> ID PERIOD llamaobj
Rule 78    estatuto -> RETURN ssexp SEMICOLON
Rule 79    iniciacontadormetodos -> ID OPARENTHESIS
Rule 80    asignacion -> variable EQUAL meteequal expresion SEMICOLON
Rule 81    asignacion -> ID asig_a SEMICOLON
Rule 82    asignacion -> OBRACKET variable EQUAL meteequal iniciacontadormetodos prefunc CBRACKET
Rule 83    meteequal -> <empty>
Rule 84    asig_a -> PLUSPLUS
Rule 85    asig_a -> MINUSMINUS
Rule 86    condicion -> OPARENTHESIS ssexp CPARENTHESIS ponergotoif bloque p
Rule 87    ponergotoif -> <empty>
Rule 88    p -> ELSE gotoelse pp
Rule 89    p -> <empty>
Rule 90    gotoelse -> <empty>
Rule 91    pp -> IF condicion
Rule 92    pp -> bloque
Rule 93    ciclofor -> iniciafor OPARENTHESIS parfor CPARENTHESIS gotoffor bloque
Rule 94    iniciafor -> <empty>
Rule 95    gotoffor -> <empty>
Rule 96    ciclowhile -> iniciawhile OPARENTHESIS ssexp CPARENTHESIS gotofwhile bloque
Rule 97    iniciawhile -> <empty>
Rule 98    gotofwhile -> <empty>
Rule 99    prefunc -> q
Rule 100   prefunc -> rrr
Rule 101   q -> exp r
Rule 102   r -> OBRACKET CBRACKET
Rule 103   r -> rr
Rule 104   rr -> COMMA q
Rule 105   rr -> rrr
Rule 106   rrr -> CPARENTHESIS SEMICOLON
Rule 107   read -> OPARENTHESIS CPARENTHESIS SEMICOLON
Rule 108   print -> OPARENTHESIS exp CPARENTHESIS SEMICOLON
Rule 109   llamaobj -> ID s
Rule 110   s -> SEMICOLON
Rule 111   s -> ss
Rule 112   ss -> OPARENTHESIS sss CPARENTHESIS SEMICOLON
Rule 113   sss -> exp
Rule 114   sss -> <empty>
Rule 115   variable -> ID t
Rule 116   t -> OBRACKET CTEI CBRACKET
Rule 117   t -> PERIOD ID
Rule 118   t -> <empty>
Rule 119   expresion -> ssexp
Rule 120   ssexp -> sexp u
Rule 121   u -> meteapilaandor ssexp checapilaorand
Rule 122   u -> <empty>
Rule 123   meteapilaandor -> AND
Rule 124   meteapilaandor -> OR
Rule 125   checapilaorand -> <empty>
Rule 126   sexp -> exp v_v
Rule 127   v_v -> v sexp checapilacondicional
Rule 128   v_v -> <empty>
Rule 129   checapilacondicional -> <empty>
Rule 130   v -> MORETHAN w
Rule 131   v -> LESSTHAN w
Rule 132   v -> NOTEQUAL
Rule 133   v -> EQUALEQUAL
Rule 134   v -> <empty>
Rule 135   w -> EQUAL
Rule 136   w -> <empty>
Rule 137   exp -> termino checapilamas x
Rule 138   checapilamas -> <empty>
Rule 139   x -> meteapilamas exp
Rule 140   x -> <empty>
Rule 141   meteapilamas -> PLUS
Rule 142   meteapilamas -> MINUS
Rule 143   termino -> factor checapilapor y
Rule 144   checapilapor -> <empty>
Rule 145   y -> meteapilapor termino
Rule 146   y -> <empty>
Rule 147   meteapilapor -> MULT
Rule 148   meteapilapor -> DIVIDE
Rule 149   factor -> z
Rule 150   z -> OPARENTHESIS expresion CPARENTHESIS
Rule 151   z -> PLUS zz
Rule 152   z -> MINUS zz
Rule 153   z -> zz
Rule 154   zz -> varcte
Rule 155   bloque -> OCURLY a_a CCURLY
Rule 156   a_a -> estatuto a_a
Rule 157   a_a -> <empty>
Rule 158   parfor -> asignacion ssexp SEMICOLON ID b_b
Rule 159   b_b -> PLUSPLUS
Rule 160   b_b -> MINUSMINUS
Rule 161   main -> VOID entroamain MAIN OPARENTHESIS CPARENTHESIS OCURLY c_c CCURLY
Rule 162   entroamain -> <empty>
Rule 163   c_c -> cccc ccc
Rule 164   ccc -> vars ccc
Rule 165   ccc -> d_d
Rule 166   cccc -> <empty>
Rule 167   d_d -> estatuto d_dd
Rule 168   d_dd -> d_d
Rule 169   d_dd -> <empty>

Terminals, with rules where they appear

AND                  : 123
BOOL                 : 37
CBRACKET             : 30 66 82 102 116
CCURLY               : 5 63 155 161
CLASS                : 1
COMMA                : 32 68 104
CPARENTHESIS         : 24 57 86 93 96 106 107 108 112 150 161
CTEF                 : 40
CTEI                 : 30 39 116
CTES                 : 41
DIVIDE               : 148
ELSE                 : 88
EQUAL                : 10 80 82 135
EQUALEQUAL           : 133
EXTENDS              : 3
FALSE                : 42
FLOAT                : 36
FOR                  : 72
GLOBAL               : 16
ID                   : 2 3 10 10 24 29 34 49 52 53 65 77 79 81 109 115 117 158
IF                   : 71 91
INT                  : 35
LESSTHAN             : 131
MAIN                 : 161
MINUS                : 142 152
MINUSMINUS           : 85 160
MORETHAN             : 130
MULT                 : 147
NEW                  : 10
NOTEQUAL             : 132
OBRACKET             : 30 66 82 102 116
OCURLY               : 5 57 155 161
OPARENTHESIS         : 24 51 79 86 93 96 107 108 112 150 161
OR                   : 124
PERIOD               : 77 117
PLUS                 : 141 151
PLUSPLUS             : 84 159
PRINT                : 76
PUBLIC               : 26
READ                 : 75
RETURN               : 78
SEMICOLON            : 24 33 78 80 81 106 107 108 110 112 158
STRING               : 38
TRUE                 : 43
VOID                 : 53 161
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

a                    : 1
a_a                  : 155 156
actualizaparametros  : 54
asig_a               : 81
asignacion           : 70 158
b                    : 3 4
b_b                  : 158
bb                   : 5
bloque               : 86 92 93 96
c                    : 9 10
c_c                  : 161
ccc                  : 163 164
cccc                 : 163
checapilacondicional : 127
checapilamas         : 137
checapilaorand       : 121
checapilapor         : 143
ciclofor             : 72
ciclowhile           : 73
clase                : 6 0
clase_a              : 1
condicion            : 71 91
creaobj              : 10
d                    : 14 17
d_d                  : 165 168
d_dd                 : 167
dd                   : 13
ddd                  : 11
dddd                 : 14
ddddd                : 13
e                    : 12 18
ee                   : 19 22
eee                  : 20
entroamain           : 161
estatuto             : 60 156 167
exp                  : 101 108 113 126 139
expresion            : 80 150
f                    : 25
factor               : 143
g                    : 26 27
gotoelse             : 88
gotoffor             : 93
gotofwhile           : 96
h                    : 28
i                    : 29
incclase             : 6
iniciacontadormetodos : 74 82
iniciafor            : 93
iniciawhile          : 96
j                    : 30 31 34
j_j                  : 32
k                    : 50
k_k                  : 51
l                    : 51
ll                   : 54 55
llamaobj             : 77
m                    : 57 61
main                 : 18
meteapilaandor       : 121
meteapilamas         : 139
meteapilapor         : 145
meteequal            : 80 82
metodos              : 20
mm                   : 58 64
n                    : 60
o                    : 65
oo                   : 66 67
p                    : 86
parfor               : 93
pars                 : 54 68
poncuadruplometodo   : 57
ponergotoif          : 86
pp                   : 88
prefunc              : 74 82
print                : 76
programa             : 5
q                    : 99 104
r                    : 101
read                 : 75
rr                   : 103
rrr                  : 100 105
s                    : 109
sexp                 : 120 127
ss                   : 111
ssexp                : 78 86 96 119 121 158
sss                  : 112
t                    : 115
terminavarsmetodo    : 58
termino              : 137 145
tipo                 : 28 52 65
u                    : 120
v                    : 127
v_v                  : 126
varcte               : 154
varcte_bool          : 42 43
varcte_float         : 40
varcte_id            : 44
varcte_int           : 39
varcte_string        : 41
variable             : 80 82
vars                 : 13 58 164
w                    : 130 131
x                    : 137
y                    : 143
z                    : 149
zz                   : 151 152 153

Parsing method: LALR

state 0

    (0) S' -> . clase
    (1) clase -> . CLASS clase_a a

    CLASS           shift and go to state 1

    clase                          shift and go to state 2

state 1

    (1) clase -> CLASS . clase_a a
    (2) clase_a -> . ID

    ID              shift and go to state 3

    clase_a                        shift and go to state 4

state 2

    (0) S' -> clase .



state 3

    (2) clase_a -> ID .

    EXTENDS         reduce using rule 2 (clase_a -> ID .)
    OCURLY          reduce using rule 2 (clase_a -> ID .)


state 4

    (1) clase -> CLASS clase_a . a
    (3) a -> . EXTENDS ID b
    (4) a -> . b
    (5) b -> . OCURLY programa CCURLY bb

    EXTENDS         shift and go to state 5
    OCURLY          shift and go to state 7

    a                              shift and go to state 8
    b                              shift and go to state 6

state 5

    (3) a -> EXTENDS . ID b

    ID              shift and go to state 9


state 6

    (4) a -> b .

    $end            reduce using rule 4 (a -> b .)


state 7

    (5) b -> OCURLY . programa CCURLY bb
    (9) programa -> . c
    (10) c -> . ID ID EQUAL NEW creaobj c
    (11) c -> . ddd
    (12) c -> . e
    (14) ddd -> . dddd d
    (19) e -> . ee
    (15) dddd -> .
    (20) ee -> . metodos eee
    (21) ee -> .
    (50) metodos -> . k
    (51) k -> . k_k OPARENTHESIS l
    (52) k_k -> . tipo ID
    (53) k_k -> . VOID ID
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    ID              shift and go to state 12
    GLOBAL          reduce using rule 15 (dddd -> .)
    CCURLY          reduce using rule 21 (ee -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 10
    c                              shift and go to state 11
    e                              shift and go to state 17
    dddd                           shift and go to state 18
    programa                       shift and go to state 14
    ee                             shift and go to state 13
    k_k                            shift and go to state 22
    ddd                            shift and go to state 24
    metodos                        shift and go to state 19
    k                              shift and go to state 15

state 8

    (1) clase -> CLASS clase_a a .

    $end            reduce using rule 1 (clase -> CLASS clase_a a .)


state 9

    (3) a -> EXTENDS ID . b
    (5) b -> . OCURLY programa CCURLY bb

    OCURLY          shift and go to state 7

    b                              shift and go to state 26

state 10

    (52) k_k -> tipo . ID

    ID              shift and go to state 27


state 11

    (9) programa -> c .

    CCURLY          reduce using rule 9 (programa -> c .)


state 12

    (10) c -> ID . ID EQUAL NEW creaobj c

    ID              shift and go to state 28


state 13

    (19) e -> ee .

    CCURLY          reduce using rule 19 (e -> ee .)


state 14

    (5) b -> OCURLY programa . CCURLY bb

    CCURLY          shift and go to state 29


state 15

    (50) metodos -> k .

    VOID            reduce using rule 50 (metodos -> k .)
    INT             reduce using rule 50 (metodos -> k .)
    FLOAT           reduce using rule 50 (metodos -> k .)
    BOOL            reduce using rule 50 (metodos -> k .)
    STRING          reduce using rule 50 (metodos -> k .)
    CCURLY          reduce using rule 50 (metodos -> k .)


state 16

    (53) k_k -> VOID . ID

    ID              shift and go to state 30


state 17

    (12) c -> e .

    CCURLY          reduce using rule 12 (c -> e .)


state 18

    (14) ddd -> dddd . d
    (13) d -> . ddddd vars dd
    (16) ddddd -> . GLOBAL

    GLOBAL          shift and go to state 33

    d                              shift and go to state 31
    ddddd                          shift and go to state 32

state 19

    (20) ee -> metodos . eee
    (22) eee -> . ee
    (23) eee -> .
    (20) ee -> . metodos eee
    (21) ee -> .
    (50) metodos -> . k
    (51) k -> . k_k OPARENTHESIS l
    (52) k_k -> . tipo ID
    (53) k_k -> . VOID ID
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

  ! reduce/reduce conflict for CCURLY resolved using rule 21 (ee -> .)
    CCURLY          reduce using rule 21 (ee -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

  ! CCURLY          [ reduce using rule 23 (eee -> .) ]

    tipo                           shift and go to state 10
    k_k                            shift and go to state 22
    eee                            shift and go to state 34
    metodos                        shift and go to state 19
    k                              shift and go to state 15
    ee                             shift and go to state 35

state 20

    (35) tipo -> INT .

    ID              reduce using rule 35 (tipo -> INT .)


state 21

    (37) tipo -> BOOL .

    ID              reduce using rule 37 (tipo -> BOOL .)


state 22

    (51) k -> k_k . OPARENTHESIS l

    OPARENTHESIS    shift and go to state 36


state 23

    (38) tipo -> STRING .

    ID              reduce using rule 38 (tipo -> STRING .)


state 24

    (11) c -> ddd .

    CCURLY          reduce using rule 11 (c -> ddd .)


state 25

    (36) tipo -> FLOAT .

    ID              reduce using rule 36 (tipo -> FLOAT .)


state 26

    (3) a -> EXTENDS ID b .

    $end            reduce using rule 3 (a -> EXTENDS ID b .)


state 27

    (52) k_k -> tipo ID .

    OPARENTHESIS    reduce using rule 52 (k_k -> tipo ID .)


state 28

    (10) c -> ID ID . EQUAL NEW creaobj c

    EQUAL           shift and go to state 37


state 29

    (5) b -> OCURLY programa CCURLY . bb
    (6) bb -> . incclase clase
    (7) bb -> .
    (8) incclase -> .

    $end            reduce using rule 7 (bb -> .)
    CLASS           reduce using rule 8 (incclase -> .)

    incclase                       shift and go to state 38
    bb                             shift and go to state 39

state 30

    (53) k_k -> VOID ID .

    OPARENTHESIS    reduce using rule 53 (k_k -> VOID ID .)


state 31

    (14) ddd -> dddd d .

    CCURLY          reduce using rule 14 (ddd -> dddd d .)


state 32

    (13) d -> ddddd . vars dd
    (25) vars -> . f
    (26) f -> . PUBLIC g
    (27) f -> . g
    (28) g -> . tipo h
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    PUBLIC          shift and go to state 44
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 40
    vars                           shift and go to state 41
    f                              shift and go to state 42
    g                              shift and go to state 43

state 33

    (16) ddddd -> GLOBAL .

    PUBLIC          reduce using rule 16 (ddddd -> GLOBAL .)
    INT             reduce using rule 16 (ddddd -> GLOBAL .)
    FLOAT           reduce using rule 16 (ddddd -> GLOBAL .)
    BOOL            reduce using rule 16 (ddddd -> GLOBAL .)
    STRING          reduce using rule 16 (ddddd -> GLOBAL .)


state 34

    (20) ee -> metodos eee .

    CCURLY          reduce using rule 20 (ee -> metodos eee .)


state 35

    (22) eee -> ee .

    CCURLY          reduce using rule 22 (eee -> ee .)


state 36

    (51) k -> k_k OPARENTHESIS . l
    (54) l -> . pars actualizaparametros ll
    (55) l -> . ll
    (65) pars -> . tipo ID o
    (57) ll -> . CPARENTHESIS OCURLY poncuadruplometodo m
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    CPARENTHESIS    shift and go to state 48
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 45
    pars                           shift and go to state 46
    l                              shift and go to state 49
    ll                             shift and go to state 47

state 37

    (10) c -> ID ID EQUAL . NEW creaobj c

    NEW             shift and go to state 50


state 38

    (6) bb -> incclase . clase
    (1) clase -> . CLASS clase_a a

    CLASS           shift and go to state 1

    clase                          shift and go to state 51

state 39

    (5) b -> OCURLY programa CCURLY bb .

    $end            reduce using rule 5 (b -> OCURLY programa CCURLY bb .)


state 40

    (28) g -> tipo . h
    (29) h -> . ID i

    ID              shift and go to state 52

    h                              shift and go to state 53

state 41

    (13) d -> ddddd vars . dd
    (17) dd -> . d
    (18) dd -> . main e
    (13) d -> . ddddd vars dd
    (161) main -> . VOID entroamain MAIN OPARENTHESIS CPARENTHESIS OCURLY c_c CCURLY
    (16) ddddd -> . GLOBAL

    VOID            shift and go to state 57
    GLOBAL          shift and go to state 33

    d                              shift and go to state 56
    main                           shift and go to state 54
    dd                             shift and go to state 55
    ddddd                          shift and go to state 32

state 42

    (25) vars -> f .

    IF              reduce using rule 25 (vars -> f .)
    FOR             reduce using rule 25 (vars -> f .)
    WHILE           reduce using rule 25 (vars -> f .)
    READ            reduce using rule 25 (vars -> f .)
    PRINT           reduce using rule 25 (vars -> f .)
    ID              reduce using rule 25 (vars -> f .)
    RETURN          reduce using rule 25 (vars -> f .)
    OBRACKET        reduce using rule 25 (vars -> f .)
    PUBLIC          reduce using rule 25 (vars -> f .)
    INT             reduce using rule 25 (vars -> f .)
    FLOAT           reduce using rule 25 (vars -> f .)
    BOOL            reduce using rule 25 (vars -> f .)
    STRING          reduce using rule 25 (vars -> f .)
    VOID            reduce using rule 25 (vars -> f .)
    GLOBAL          reduce using rule 25 (vars -> f .)


state 43

    (27) f -> g .

    VOID            reduce using rule 27 (f -> g .)
    GLOBAL          reduce using rule 27 (f -> g .)
    IF              reduce using rule 27 (f -> g .)
    FOR             reduce using rule 27 (f -> g .)
    WHILE           reduce using rule 27 (f -> g .)
    READ            reduce using rule 27 (f -> g .)
    PRINT           reduce using rule 27 (f -> g .)
    ID              reduce using rule 27 (f -> g .)
    RETURN          reduce using rule 27 (f -> g .)
    OBRACKET        reduce using rule 27 (f -> g .)
    PUBLIC          reduce using rule 27 (f -> g .)
    INT             reduce using rule 27 (f -> g .)
    FLOAT           reduce using rule 27 (f -> g .)
    BOOL            reduce using rule 27 (f -> g .)
    STRING          reduce using rule 27 (f -> g .)


state 44

    (26) f -> PUBLIC . g
    (28) g -> . tipo h
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 40
    g                              shift and go to state 58

state 45

    (65) pars -> tipo . ID o

    ID              shift and go to state 59


state 46

    (54) l -> pars . actualizaparametros ll
    (56) actualizaparametros -> .

    CPARENTHESIS    reduce using rule 56 (actualizaparametros -> .)

    actualizaparametros            shift and go to state 60

state 47

    (55) l -> ll .

    VOID            reduce using rule 55 (l -> ll .)
    INT             reduce using rule 55 (l -> ll .)
    FLOAT           reduce using rule 55 (l -> ll .)
    BOOL            reduce using rule 55 (l -> ll .)
    STRING          reduce using rule 55 (l -> ll .)
    CCURLY          reduce using rule 55 (l -> ll .)


state 48

    (57) ll -> CPARENTHESIS . OCURLY poncuadruplometodo m

    OCURLY          shift and go to state 61


state 49

    (51) k -> k_k OPARENTHESIS l .

    VOID            reduce using rule 51 (k -> k_k OPARENTHESIS l .)
    INT             reduce using rule 51 (k -> k_k OPARENTHESIS l .)
    FLOAT           reduce using rule 51 (k -> k_k OPARENTHESIS l .)
    BOOL            reduce using rule 51 (k -> k_k OPARENTHESIS l .)
    STRING          reduce using rule 51 (k -> k_k OPARENTHESIS l .)
    CCURLY          reduce using rule 51 (k -> k_k OPARENTHESIS l .)


state 50

    (10) c -> ID ID EQUAL NEW . creaobj c
    (24) creaobj -> . ID OPARENTHESIS CPARENTHESIS SEMICOLON

    ID              shift and go to state 63

    creaobj                        shift and go to state 62

state 51

    (6) bb -> incclase clase .

    $end            reduce using rule 6 (bb -> incclase clase .)


state 52

    (29) h -> ID . i
    (30) i -> . OBRACKET CTEI CBRACKET j
    (31) i -> . j
    (32) j -> . COMMA j_j
    (33) j -> . SEMICOLON

    OBRACKET        shift and go to state 67
    COMMA           shift and go to state 66
    SEMICOLON       shift and go to state 65

    j                              shift and go to state 64
    i                              shift and go to state 68

state 53

    (28) g -> tipo h .

    VOID            reduce using rule 28 (g -> tipo h .)
    GLOBAL          reduce using rule 28 (g -> tipo h .)
    IF              reduce using rule 28 (g -> tipo h .)
    FOR             reduce using rule 28 (g -> tipo h .)
    WHILE           reduce using rule 28 (g -> tipo h .)
    READ            reduce using rule 28 (g -> tipo h .)
    PRINT           reduce using rule 28 (g -> tipo h .)
    ID              reduce using rule 28 (g -> tipo h .)
    RETURN          reduce using rule 28 (g -> tipo h .)
    OBRACKET        reduce using rule 28 (g -> tipo h .)
    PUBLIC          reduce using rule 28 (g -> tipo h .)
    INT             reduce using rule 28 (g -> tipo h .)
    FLOAT           reduce using rule 28 (g -> tipo h .)
    BOOL            reduce using rule 28 (g -> tipo h .)
    STRING          reduce using rule 28 (g -> tipo h .)


state 54

    (18) dd -> main . e
    (19) e -> . ee
    (20) ee -> . metodos eee
    (21) ee -> .
    (50) metodos -> . k
    (51) k -> . k_k OPARENTHESIS l
    (52) k_k -> . tipo ID
    (53) k_k -> . VOID ID
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    CCURLY          reduce using rule 21 (ee -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 10
    k_k                            shift and go to state 22
    e                              shift and go to state 69
    metodos                        shift and go to state 19
    k                              shift and go to state 15
    ee                             shift and go to state 13

state 55

    (13) d -> ddddd vars dd .

    CCURLY          reduce using rule 13 (d -> ddddd vars dd .)


state 56

    (17) dd -> d .

    CCURLY          reduce using rule 17 (dd -> d .)


state 57

    (161) main -> VOID . entroamain MAIN OPARENTHESIS CPARENTHESIS OCURLY c_c CCURLY
    (162) entroamain -> .

    MAIN            reduce using rule 162 (entroamain -> .)

    entroamain                     shift and go to state 70

state 58

    (26) f -> PUBLIC g .

    VOID            reduce using rule 26 (f -> PUBLIC g .)
    GLOBAL          reduce using rule 26 (f -> PUBLIC g .)
    IF              reduce using rule 26 (f -> PUBLIC g .)
    FOR             reduce using rule 26 (f -> PUBLIC g .)
    WHILE           reduce using rule 26 (f -> PUBLIC g .)
    READ            reduce using rule 26 (f -> PUBLIC g .)
    PRINT           reduce using rule 26 (f -> PUBLIC g .)
    ID              reduce using rule 26 (f -> PUBLIC g .)
    RETURN          reduce using rule 26 (f -> PUBLIC g .)
    OBRACKET        reduce using rule 26 (f -> PUBLIC g .)
    PUBLIC          reduce using rule 26 (f -> PUBLIC g .)
    INT             reduce using rule 26 (f -> PUBLIC g .)
    FLOAT           reduce using rule 26 (f -> PUBLIC g .)
    BOOL            reduce using rule 26 (f -> PUBLIC g .)
    STRING          reduce using rule 26 (f -> PUBLIC g .)


state 59

    (65) pars -> tipo ID . o
    (66) o -> . OBRACKET CBRACKET oo
    (67) o -> . oo
    (68) oo -> . COMMA pars
    (69) oo -> .

    OBRACKET        shift and go to state 73
    COMMA           shift and go to state 72
    CPARENTHESIS    reduce using rule 69 (oo -> .)

    oo                             shift and go to state 71
    o                              shift and go to state 74

state 60

    (54) l -> pars actualizaparametros . ll
    (57) ll -> . CPARENTHESIS OCURLY poncuadruplometodo m

    CPARENTHESIS    shift and go to state 48

    ll                             shift and go to state 75

state 61

    (57) ll -> CPARENTHESIS OCURLY . poncuadruplometodo m
    (62) poncuadruplometodo -> .

    PUBLIC          reduce using rule 62 (poncuadruplometodo -> .)
    INT             reduce using rule 62 (poncuadruplometodo -> .)
    FLOAT           reduce using rule 62 (poncuadruplometodo -> .)
    BOOL            reduce using rule 62 (poncuadruplometodo -> .)
    STRING          reduce using rule 62 (poncuadruplometodo -> .)

    poncuadruplometodo             shift and go to state 76

state 62

    (10) c -> ID ID EQUAL NEW creaobj . c
    (10) c -> . ID ID EQUAL NEW creaobj c
    (11) c -> . ddd
    (12) c -> . e
    (14) ddd -> . dddd d
    (19) e -> . ee
    (15) dddd -> .
    (20) ee -> . metodos eee
    (21) ee -> .
    (50) metodos -> . k
    (51) k -> . k_k OPARENTHESIS l
    (52) k_k -> . tipo ID
    (53) k_k -> . VOID ID
    (35) tipo -> . INT
    (36) tipo -> . FLOAT
    (37) tipo -> . BOOL
    (38) tipo -> . STRING

    ID              shift and go to state 12
    GLOBAL          reduce using rule 15 (dddd -> .)
    CCURLY          reduce using rule 21 (ee -> .)
    VOID            shift and go to state 16
    INT             shift and go to state 20
    FLOAT           shift and go to state 25
    BOOL            shift and go to state 21
    STRING          shift and go to state 23

    tipo                           shift and go to state 10
    c                              shift and go to state 77
    e                              shift and go to state 17
    dddd                           shift and go to state 18
    ee                             shift and go to state 13
    k_k                            shift and go to state 22
    ddd                            shift and go to state 24
    metodos                        shift and go to state 19
    k                              shift and go to state 15

state 63

    (24) creaobj -> ID . OPARENTHESIS CPARENTHESIS SEMICOLON

    OPARENTHESIS    shift and go to state 78


state 64

    (31) i -> j .

    VOID            reduce using rule 31 (i -> j .)
    GLOBAL          reduce using rule 31 (i -> j .)
    IF              reduce using rule 31 (i -> j .)
    FOR             reduce using rule 31 (i -> j .)
    WHILE           reduce using rule 31 (i -> j .)
    READ            reduce using rule 31 (i -> j .)
    PRINT           reduce using rule 31 (i -> j .)
    ID              reduce using rule 31 (i -> j .)
    RETURN          reduce using rule 31 (i -> j .)
    OBRACKET        reduce using rule 31 (i -> j .)
    PUBLIC          reduce using rule 31 (i -> j .)
    INT             reduce using rule 31 (i -> j .)
    FLOAT           reduce using rule 31 (i -> j .)
    BOOL            reduce using rule 31 (i -> j .)
    STRING          reduce using rule 31 (i -> j .)


state 65

    (33) j -> SEMICOLON .

    VOID            reduce using rule 33 (j -> SEMICOLON .)
    GLOBAL          reduce using rule 33 (j -> SEMICOLON .)
    IF              reduce using rule 33 (j -> SEMICOLON .)
    FOR             reduce using rule 33 (j -> SEMICOLON .)
    WHILE           reduce using rule 33 (j -> SEMICOLON .)
    READ            reduce using rule 33 (j -> SEMICOLON .)
    PRINT           reduce using rule 33 (j -> SEMICOLON .)
    ID              reduce using rule 33 (j -> SEMICOLON .)
    RETURN          reduce using rule 33 (j -> SEMICOLON .)
    OBRACKET        reduce using rule 33 (j -> SEMICOLON .)
    PUBLIC          reduce using rule 33 (j -> SEMICOLON .)
    INT             reduce using rule 33 (j -> SEMICOLON .)
    FLOAT           reduce using rule 33 (j -> SEMICOLON .)
    BOOL            reduce using rule 33 (j -> SEMICOLON .)
    STRING          reduce using rule 33 (j -> SEMICOLON .)


state 66

    (32) j -> COMMA . j_j
    (34) j_j -> . ID j

    ID              shift and go to state 79

    j_j                            shift and go to state 80

state 67

    (30) i -> OBRACKET . CTEI CBRACKET j

    CTEI            shift and go to state 81


state 68

    (29) h -> ID i .

    VOID            reduce using rule 29 (h -> ID i .)
    GLOBAL          reduce using rule 29 (h -> ID i .)
    IF              reduce using rule 29 (h -> ID i .)
    FOR             reduce using rule 29 (h -> ID i .)
    WHILE           reduce using rule 29 (h -> ID i .)
    READ            reduce using rule 29 (h -> ID i .)
    PRINT           reduce using rule 29 (h -> ID i .)
    ID              reduce using rule 29 (h -> ID i .)
    RETURN          reduce using rule 29 (h -> ID i .)
    OBRACKET        reduce using rule 29 (h -> ID i .)
    PUBLIC          reduce using rule 29 (h -> ID i .)
    INT             reduce using rule 29 (h -> ID i .)
    FLOAT           reduce using rule 29 (h -> ID i .)
    BOOL            reduce using rule 29 (h -> ID i .)
    STRING          reduce using rule 29 (h -> ID i .)


state 69

    (18) dd -> main e .

    CCURLY          reduce using rule 18 (dd -> main e .)


state 70

    (161) main -> VOID entroamain . MAIN OPARENTHESIS CPARENTHESIS OCURLY c_c CCURLY

    MAIN            shift and go to state 82


state 71

    (67) o -> oo .
